@@ -14,22 +14,20 @@ public enum Result {
     WRONG_LANGUAGE,
     APPLICATION_NOT_REGISTERED,
     IN_USE,
-    SUBSCRIBED_ALREADY,
     VEHICLE_DATA_NOT_ALLOWED,
     VEHICLE_DATA_NOT_AVAILABLE,
     REJECTED,
     ABORTED,
     IGNORED,
-    RETRY,
-    UNSUPPORTED_BUTTON,
+    UNSUPPORTED_RESOURCE,
     FILE_NOT_FOUND,
     GENERIC_ERROR,
     DISALLOWED,
     USER_DISALLOWED,
     TIMED_OUT,
     CANCEL_ROUTE,
-    CLOSED,
-    ENCRYPTED,
+    TRUNCATED_DATA,
+    RETRY,
     WARNINGS;
 
     public static Result valueForString(String value) {
